--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //    QR Code
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
 }
